<resources>
    <string name="app_name">Social Media App</string>
    <string name="sign">Sign</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="login">Login</string>
    <string name="login_page">Login Page</string>
    <string name="register_page">Register Page</string>
    <string name="already_created_account">Already Created Account</string>
    <string name="create_account">Create Account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_app_logo">Toolbar App Logo</string>
    <string name="social_app">Social App</string>
    <string name="toolbar_messages_button">Toolbar Messages Button</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
</resources>